# Lhydra-Flask

./: .gitignore  README.md  app.py  data_utils.py  encoder_utils.py  evaluate_model.py  generate_recommendations.py  genre_parser.py  path_config.py  pyproject.toml  requirements.txt  test_run.py  train_model.py
api/: main.py  package-lock.json
config/: model_config.json
data/: data_encoders.pt
frontend/pages/: index.tsx
metrics/: evaluation_results.json  training_metrics_20250102_064900.json  training_metrics_20250102_200715.json  training_metrics_20250102_203004.json  training_metrics_20250102_210550.json  training_metrics_20250103_030301.json  training_metrics_20250103_030828.json  training_metrics_20250103_033513.json  training_metrics_20250103_043332.json  training_metrics_20250103_044652.json  training_metrics_20250103_092757.json  training_metrics_20250103_165619.json  training_metrics_20250104_000005.json  training_metrics_20250104_002329.json  training_metrics_20250104_003816.json  training_metrics_20250104_010732.json  training_metrics_20250104_011443.json  training_metrics_20250104_012344.json  training_metrics_20250104_021315.json  training_metrics_20250104_021913.json  training_metrics_20250104_024710.json  training_metrics_20250104_030507.json  training_metrics_20250104_030726.json  training_metrics_20250104_031341.json  training_metrics_20250104_032615.json  training_metrics_20250104_034610.json  training_metrics_20250104_034927.json  training_metrics_20250104_035558.json  training_metrics_20250104_035955.json  training_metrics_20250104_040334.json  (+20 more)
(+7 files in other folders)
