[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Lhydra-Flask"
version = "0.1.0"
description = "A Flask-based project with advanced dependencies for Python 3.11"
requires-python = ">=3.11"
dependencies = [
    "gunicorn",
    "tqdm==4.67.1",
    "flask==3.0.0",
    "flask-cors",
    "pandas==2.1.3",
    "torch==2.5.1",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "voyager==2.1.0",
    "transformers==4.47.1",
    "seaborn==0.13.2",
    "sentence-transformers==3.3.1",
    "matplotlib==3.10.0",
    "tokenizers==0.21.0",
    "gensim==4.3.3",
    "lime==0.2.0.1",
    "huggingface-hub==0.27.0"
]
